--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0.104"
 libflate = "2.0.0"
 thiserror = "1.0.47"
 async-recursion = "1.0.4"
+html-escape = "0.2.13"
 
 [[bin]]
 name = "rustpush-test"
