--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ default-run = "rustpush-test"
 lazy_static = "1.4.0"
 plist = "1.5.0"
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip"] }
 serde = { version = "1.0", features = ["derive"] }
 openssl = { version = "0.10.56", features = ["vendored"] }
 uuid = { version = "1.4.1", features = ["v4"] }
@@ -25,6 +25,11 @@ libflate = "2.0.0"
 thiserror = "1.0.47"
 async-recursion = "1.0.4"
 html-escape = "0.2.13"
+xml-rs = "0.8.17"
+prost = "0.12.0"
+
+[build-dependencies]
+prost-build = { version = "0.12.0" }
 
 [[bin]]
 name = "rustpush-test"
