--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ default-run = "rustpush-test"
 lazy_static = "1.4.0"
 plist = "1.5.0"
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "stream"] }
 serde = { version = "1.0", features = ["derive"] }
 openssl = { version = "0.10.56", features = ["vendored"] }
 uuid = { version = "1.4.1", features = ["v4"] }
