--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ xml-rs = "0.8.17"
 prost = "0.12.0"
 log = "0.4.20"
 pretty_env_logger = "0.5.0"
+async-trait = "0.1.73"
+flume = "0.11.0"
 
 [build-dependencies]
 prost-build = { version = "0.12.0" }
