--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,11 +30,11 @@ log = "0.4.20"
 pretty_env_logger = "0.5.0"
 async-trait = "0.1.73"
 flume = "0.11.0"
-open-abinsthe = { path = "/home/tae/Documents/open-abinsthe", optional = true, features = ["serde"] }
+open-absinthe = { path = "/home/tae/Documents/open-absinthe", optional = true, features = ["serde"] }
 
 [features]
 default = ["macOS"]
-macOS = ["dep:open-abinsthe"]
+macOS = ["dep:open-absinthe"]
 
 
 [build-dependencies]
