--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ pretty_env_logger = "0.5.0"
 async-trait = "0.1.73"
 flume = "0.11.0"
 open-absinthe = { path = "/home/tae/Documents/open-absinthe", optional = true, features = ["serde"] }
+icloud_auth = { path = "/home/tae/Documents/GitHub/apple-private-apis/icloud-auth" }
 
 [features]
 default = ["macOS"]
