--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ flume = "0.11.0"
 open-absinthe = { path = "/home/tae/Documents/open-absinthe", optional = true, features = ["serde"] }
 icloud_auth = { path = "/home/tae/Documents/GitHub/apple-private-apis/icloud-auth" }
 deku = "0.16.0"
+zip = { version = "1.3.0", default-features = false, features = ["deflate-zlib"] }
 
 [features]
 default = ["macOS"]
