--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ icloud_auth = { path = "/home/tae/Documents/GitHub/apple-private-apis/icloud-aut
 deku = "0.16.0"
 zip = { version = "1.3.0", default-features = false, features = ["deflate-zlib"] }
 rasn = "0.16.0"
+backon = "0.4.4"
 
 [features]
 default = ["macOS"]
