--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ pretty_env_logger = "0.5.0"
 async-trait = "0.1.73"
 flume = "0.11.0"
 open-absinthe = { path = "/home/tae/Documents/open-absinthe", optional = true, features = ["serde"] }
-icloud_auth = { path = "/home/tae/Documents/GitHub/apple-private-apis/icloud-auth" }
+icloud_auth = { git = "https://github.com/OpenBubbles/apple-private-apis", branch = "master" }
 deku = "0.16.0"
 zip = { version = "2.1.5", default-features = false, features = ["deflate-zlib"] }
 rasn = "0.16.0"
