--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,11 +31,13 @@ async-trait = "0.1.73"
 flume = "0.11.0"
 open-absinthe = { path = "/home/tae/Documents/open-absinthe", optional = true, features = ["serde"] }
 icloud_auth = { path = "/home/tae/Documents/GitHub/apple-private-apis/icloud-auth" }
+omnisette = { path = "/home/tae/Documents/GitHub/apple-private-apis/omnisette" }
 deku = "0.16.0"
 zip = { version = "2.1.5", default-features = false, features = ["deflate-zlib"] }
 rasn = "0.16.0"
 backon = "0.4.4"
 futures = "0.3.30"
+serde_json = "1.0.133"
 
 [features]
 default = ["macOS"]
