added 'dummy-fairplay' feature that enables a dummy fairplay cert to be used instead of real ones

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ serde_json = "1.0.128"
 [features]
 default = ["macOS"]
 macOS = ["dep:open-absinthe"]
+dummy-fairplay = []
 
 
 [build-dependencies]
