--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,11 @@ backon = "0.4.4"
 futures = "0.3.30"
 serde_json = "1.0.133"
 notify = "7.0.0"
+num-bigint = "0.4.6"
+ctr = "0.9.2"
+aes = "0.8.4"
+sha2 = "0.10.8"
+hkdf = "0.12.4"
 
 [features]
 default = ["macOS"]
