--- a/cloudkit-proto/Cargo.toml
+++ b/cloudkit-proto/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 [dependencies]
 prost = "0.12.0"
+base64 = "0.21.2"
+serde = { version = "1.0", features = ["derive"] }
+plist = "1.7.0"
+disjoint_impls = "1.0.5"
 
 [build-dependencies]
 prost-build = { version = "0.12.0" }
