Move OpenAbsinthe to submodule part 2

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "apple-private-apis"]
 	path = apple-private-apis
 	url = git@github.com:OpenBubbles/apple-private-apis.git
+[submodule "open-absinthe"]
+	path = open-absinthe
+	url = git@github.com:OpenBubbles/OpenAbsinthe-Stub.git
