--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,9 @@ log = "0.4.20"
 pretty_env_logger = "0.5.0"
 async-trait = "0.1.73"
 flume = "0.11.0"
-icloud_auth = { path = "./apple-private-apis/icloud-auth", default-features = false, features = ["remote-clearadi"] }
+icloud_auth = { path = "./apple-private-apis/icloud-auth", default-features = false }
 srp = { path = "./apple-private-apis/icloud-auth/rustcrypto-srp" }
-omnisette = { path = "./apple-private-apis/omnisette", features = ["remote-clearadi"] }
+omnisette = { path = "./apple-private-apis/omnisette" }
 open-absinthe = { path = "./open-absinthe", optional = true, features = ["serde"] }
 deku = "0.16.0"
 zip = { version = "2.1.5", default-features = false, features = ["deflate-zlib"] }
